src/styles/landingpage.scss
body {
	display: flex;
	flex-direction: column;
}


.hero {
	width: 100vw;
	height: 100vh;
	display: flex;
	flex-direction: column;
	background-color: var(--yellow);
	padding: 40px;
	z-index: 0;

	.hero-h1-row {
		display: flex;
		column-gap: 8px;
		overflow: clip;
		justify-content: space-between;
		height: 40%;

		.logo-letters {
			height: auto;
			width: auto;
		}
	}

	.hero-menu-row {
		overflow: clip;

		a {
			display: flex; //because default to inline, which couldnt be transformed
			text-decoration: none;
			font-size: 40px;
			font-weight: 600;
		}


		ul {
			list-style-type: none;
			display: flex;
			width: 100%;
			justify-content: space-between;
		}

		li {
			display: flex;
			align-content: center;
		}

		.nav-separator {
			width: 16px;
			height: auto;
		}
	}

}

.intro {
	height: 100vh;
	width: 100vw;
	position: fixed;
	z-index: 1;

	.intro-header {
		// position: absolute;
		z-index: 7;
		color: var(--white);
		font-size: 14vw;
		letter-spacing: 0px;
		display: flex;
		align-items: center;

	}

	span {
		color: var(--white);
	}

	.boxes {
		height: 100%;
		width: 100%;
		position: absolute;
	}

	.box-1 {
		display: flex;
		align-items: start;
		justify-content: end;
		flex-direction: column;
		padding: 40px;
		background-color: var(--black);
		z-index: 6;
	}

	.box-2 {
		background-color: #FFC371;
		z-index: 5;
	}

	.box-3 {
		background-color: #FFD200;
		z-index: 4;
	}

	.box-4 {
		background-color: #F7971E;
		z-index: 3;
	}

	.box-5 {
		background-color: #E94057;
		z-index: 2;
	}
}

.works {
	display: flex;
	flex-direction: column;
	background-color: var(--yellow);
	width: 100vw;
	height: auto;


	.works-text-container {
		height: 18em;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		padding-bottom: 20px;
	}

	.works-paragraph {
		color: var(--black);
		font-size: 24px;
		font-weight: 400;
	}

	.works-header,
	.works-indicator {
		color: var(--black);
	}

	.works-header {
		font-weight: 500;
		line-height: 100%;
		font-size: 80px;
	}

	.works-indicator {
		font-weight: 500;
		font-size: 24px;
	}


	.works-rows,
	.works-rows-image {
		width: 100%;
		border-bottom: dashed 1px var(--black);
	}

	.works-rows-image {
		overflow: clip;
		display: flex;
		flex-direction: column;
		background-color: var(--yellow);
		height: auto;

		.works-rows-text-container {
			display: flex;
			flex-direction: column;

			h1 {
				color: var(--black);
				font-weight: 700;
				line-height: 100%;
				font-size: 280px;
			}

			.works-row {
				width: 100%;
				display: flex;
				justify-content: space-between;
			}

			.works-row-text-3 {
				padding-left: 520px;
			}

			.works-row-text-4 {
				padding-left: 120px;
				padding-right: 800px;
			}

		}
	}

	.works-rows {
		height: auto;
		display: grid;
		grid-template-columns: 1fr 3fr 1fr;
		padding-top: 20px;
	}

	.works-col-1 {
		// background-color: red;
		padding-left: 40px;
	}

	.works-col-2 {
		// background-color: blue;
	}

	.works-col-3 {
		// background-color: green;
		padding-right: 40px;
	}
}

